--- a/pages/Home.html
+++ b/pages/Home.html
@@ -1,12 +1,17 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-<title>Home</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+    <head>
+        <title>Home</title>
+        <link rel="stylesheet" href="../assets/css/001.css">
+    </head>
+    <body>
+        <img src="../assets/images/logoapp.png" class="center" style="padding-top: 10px;">
+        <h2 class="center">เว็บไซต์รายงานสถานการณ์โควิด-19 และข้อมูลผู้ป่วย</h2>
+        <div class="homebutton center"> 
+            <button class="home-button" href="#">ประจำวัน</button>
+            <button class="home-button" href="#">ระลอก 1-2</button>
+            <button class="home-button" href="#">ระลอก 3</button>
+        </div>
+        <h2 class="center" style="color: #14B1AB;">คณะผู้จัดทำ</h2>
+    </body>
 </html>
