--- a/pages/Home.html
+++ b/pages/Home.html
@@ -2,16 +2,29 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="../assets/css/001.css">
+        <link rel="stylesheet" href="../assets/css/home.css">
     </head>
     <body>
-        <img src="../assets/images/logoapp.png" class="center" style="padding-top: 10px;">
+        <img src="../assets/images/logoapp.png" class="center"  style="max-width: 560px;">
         <h2 class="center">เว็บไซต์รายงานสถานการณ์โควิด-19 และข้อมูลผู้ป่วย</h2>
         <div class="homebutton center"> 
-            <button class="home-button" href="#">ประจำวัน</button>
-            <button class="home-button" href="#">ระลอก 1-2</button>
-            <button class="home-button" href="#">ระลอก 3</button>
+            <button type="button" class="home-button" href="#">ประจำวัน</button>
+            <button type="button" class="home-button" onclick="window.location.href='Sum12.html'">ระลอก 1-2</button>
+            <button type="button" class="home-button" href="#">ระลอก 3</button>
         </div>
         <h2 class="center" style="color: #14B1AB;">คณะผู้จัดทำ</h2>
+        <div class="center" style="width: 450px;"> 
+            <h4>คฑาเทพ เดชสุภา  62030006
+                พิษณุ จันทร์มั่น  62030057</h4>
+            <h4>ภาณุวัชร เวหาด  62030060
+                มณฑา พรภิญโญ  62030065</h4>
+            <h4>เมธาพร ท้วมจันทร์  62030067 
+                วนัสบดี กาสุรงค์  62030072</h4>
+            <h4>วริศรา รุ่งสว่าง  62030075
+                วัชกร วังชากร  62030076</h4>
+            <h4>สหัสวรรษ เวียงปฏิ  62030085
+                สิรวิชญ์ บุญภูมิ  62030086</h4>
+        </div>
+
     </body>
 </html>
