--- a/pages/Home.html
+++ b/pages/Home.html
@@ -6,14 +6,14 @@
     </head>
     <body>
         <img src="../assets/images/logoapp.png" class="center"  style="max-width: 560px;">
-        <h2 class="center">เว็บไซต์รายงานสถานการณ์โควิด-19 และข้อมูลผู้ป่วย</h2>
+        <h2 class="center" style="color: #1F5E4B;">เว็บไซต์รายงานสถานการณ์โควิด-19 และข้อมูลผู้ป่วย</h2>
         <div class="homebutton center"> 
             <button type="button" class="home-button" href="#">ประจำวัน</button>
             <button type="button" class="home-button" onclick="window.location.href='Sum12.html'">ระลอก 1-2</button>
             <button type="button" class="home-button" href="#">ระลอก 3</button>
         </div>
         <h2 class="center" style="color: #14B1AB;">คณะผู้จัดทำ</h2>
-        <div class="center" style="width: 450px;"> 
+        <div class="center" style="width: 450px;color: #1F5E4B;"> 
             <h4>คฑาเทพ เดชสุภา  62030006
                 พิษณุ จันทร์มั่น  62030057</h4>
             <h4>ภาณุวัชร เวหาด  62030060
