--- a/pages/sum12.html
+++ b/pages/sum12.html
@@ -5,17 +5,24 @@
         <link rel="stylesheet" href="../assets/css/sum12.css">
     </head>
     <body>
-        <Sider>
-           <img><h1> 
-        </Sider>
-        <div>
-            <Header>
-                
-            </Header>
-            
-            <Content>
+        <div class="layout">
+            <div class="sider">
+                <div class="logoapp2">
+                    <img src="../assets/images/logoapp2.png" class="center" 
+                    style="width: 170px;"/>
+                </div>
+            </div>
+            <div>
+                <div class="header">
+                    <a class="text-header">รายงานสถานการณ์โควิด-19 ระลอก 1-2</h1>
+                </div>
+                    <button ></button>
+                    <button ></button>
+                    <button ></button>
+                <div>
 
-            </Content>
-        <dib>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
